# TapIn2025

./: .env.docker  .gitignore  ANDROID_DEBUG_GUIDE.md  ANDROID_TAP_IN_FIX.md  FIND_NEARBY_CHATS_STATUS.md  FRONTEND_MESSAGE_VISIBILITY_REPORT.md  GITIGNORE_UPDATES.md  LOCAL_CHAT_STATUS.md  LOCATION_CHAT_FIX_SUMMARY.md  LOCATION_SEARCH_FIX_SUMMARY.md  MESSAGE_FORMAT_FIX_SUMMARY.md  Makefile  README.md  SETUP_INSTRUCTIONS.md  TEST_CHAT_NAVIGATION.md  TEST_ORGANIZATION.md  WEBSOCKET_DEBUG_REPORT.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  init-db.sql  init-postgis.sql  package-lock.json  package.json  run_hex_tests.sh  test-results.md
.claude/: settings.json
address/: .env.example  Dockerfile  README.md  alembic.ini  demo_spatial_analysis.py  dev_setup.py  docker-compose.yml  entrypoint.sh  init-hex-db.sql  install.sh  pyproject.toml  requirements.txt  run.py  run_e2e_tests.sh  start.sh  test_e2e.py  test_e2e_config.py  test_full_gis.py  test_service.py  test_with_postgis.sh
auth/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  integration_test.go  (+1 more)
chat/: .dockerignore  Cargo.toml  Dockerfile  README.md  README_TESTS.md  WEBSOCKET_MONITORING.md  browser_websocket_monitor.html  package.json  websocket_monitor.js  websocket_monitor.py
chat/src/: auth.rs  db.rs  dm.rs  errors.rs  handlers.rs  hex_chat.rs  lib.rs  local_chat.rs  main.rs  models.rs  user_events.rs  websocket.rs  websocket_backup.rs  websocket_original.rs  websocket_pubsub.rs
chat/tests/: location_chat_tests.rs  simple_integration_tests.rs  test_hex_chat.rs
(+194 files in other folders)
